@@ -1,3 +1,4 @@
+    ADDED: KrSearch edit/view file in the result list window (F3, F4, right click)
     ADDED: a folder-history button, a-la-total commander. thanks to Hans Loffler!
     ADDED: selectall at rename
     ADDED: a paritialy working user menu (try alt+~)
